cn/snowskystudio/newgame/test/error/LoggerHasNoName.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class LoggerHasNoName(BaseError):
    TYPE = "LoggerHasNoName"
